Fix flash when first loading page. Fix height on Safari

--- a/styles/keyboard.css
+++ b/styles/keyboard.css
@@ -1,94 +1,94 @@
-#keyboard{
-  font-weight:bold;
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: calc(500px - 20px);
-  width: 100%;
-  margin: 0 auto
+#keyboard {
+	font-weight: bold;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	max-width: calc(500px - 20px);
+	width: 100%;
+	margin: 0 auto;
+	flex: 1;
 }
 
-.keyboard-row{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  width: 100%;
-  margin-bottom: 8px;
+.keyboard-row {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	width: 100%;
+	margin-bottom: 8px;
 }
 
-#keyboard button.letter-key:last-of-type{
-  margin: 0;
+#keyboard button.letter-key:last-of-type {
+	margin: 0;
 }
 
-#keyboard button.letter-key{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  height: 58px;
-  margin: 0 6px 0 0;
-  background-color: var(--keyBgColor); 
-  border:none;
-  border-radius: 4px;
-  text-transform: uppercase;  
-  color: var(--textColor);
-  cursor: pointer;
-  font-weight: 500;
-  flex: 1;
+#keyboard button.letter-key {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 1;
+	height: 58px;
+	margin: 0 6px 0 0;
+	background-color: var(--keyBgColor);
+	border: none;
+	border-radius: 4px;
+	text-transform: uppercase;
+	color: var(--textColor);
+	cursor: pointer;
+	font-weight: 500;
+	flex: 1;
 }
 
-#keyboard button.letter-key-spacer{
-  background-color: transparent;
-  border: none;
+#keyboard button.letter-key-spacer {
+	background-color: transparent;
+	border: none;
 }
 
-
-#keyboard button.letter-key[data-state='correct']{
-  background-color: var(--darkendGreen);
-  color:#fff;
+#keyboard button.letter-key[data-state="correct"] {
+	background-color: var(--darkendGreen);
+	color: #fff;
 }
 
-#keyboard button.letter-key[data-state='present']{
-  background-color: var(--darkendYellow);
-  color:#fff;
+#keyboard button.letter-key[data-state="present"] {
+	background-color: var(--darkendYellow);
+	color: #fff;
 }
 
-#keyboard button.letter-key[data-state='absent']{
-  background-color: var(--darkestGray);
-  color:#fff;
+#keyboard button.letter-key[data-state="absent"] {
+	background-color: var(--darkestGray);
+	color: #fff;
 }
 
 #keyboard button.letter-key[data-key="backspace"],
-#keyboard button.letter-key[data-key="enter"]{
-  flex: 1.5;
+#keyboard button.letter-key[data-key="enter"] {
+	flex: 1.5;
 }
 
-@media (max-width: 768px){
-  #keyboard{
-    padding-left: 10px;
-    padding-right: 10px;
-    max-width: 100%;
-    max-width: calc(var(--vw, 100%));
-    justify-content: unset;
-    align-items: unset;
-    width: unset;
-    margin: unset;
-  }
-  
-  .keyboard-row{
-    margin-bottom: 4px;
-  }
+@media (max-width: 768px) {
+	#keyboard {
+		padding-left: 10px;
+		padding-right: 10px;
+		max-width: 100%;
+		max-width: calc(var(--vw, 100%));
+		justify-content: unset;
+		align-items: unset;
+		width: unset;
+		margin: unset;
+	}
 
-  #keyboard button.letter-key{
-    margin: 0 3px 0 0;
-  }
+	.keyboard-row {
+		margin-bottom: 4px;
+	}
 
-  #keyboard button.letter-key[data-key="backspace"]{
-    flex: 1.5;
-  }
-  #keyboard button.letter-key[data-key="enter"]{
-    flex: 1.1;
-    font-size: .75rem;
-  }
+	#keyboard button.letter-key {
+		margin: 0 3px 0 0;
+	}
+
+	#keyboard button.letter-key[data-key="backspace"] {
+		flex: 1.5;
+	}
+	#keyboard button.letter-key[data-key="enter"] {
+		flex: 1.1;
+		font-size: 0.75rem;
+	}
 }
