--- a/styles/main.css
+++ b/styles/main.css
@@ -5,20 +5,6 @@
 @import "bounce.css";
 @import "sidebar.css";
 
-@font-face {
-	font-family: "ClearSans";
-	src: url("/assets/fonts/ClearSans.woff") format("woff"),
-		/* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-			url("/assets/fonts/ClearSans.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-}
-
-@font-face {
-	font-family: "ClearSansBold";
-	src: url("/assets/fonts/ClearSans-Bold.woff") format("woff"),
-		/* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-			url("/assets/fonts/ClearSans-Bold.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
-}
-
 :root {
 	--headerHeight: 66px;
 	--green: #6aaa64;
@@ -41,7 +27,6 @@
 	--exBorderColor: #878a8c;
 	--bgColor: #fff;
 	--textColor: #000;
-	font-family: "ClearSansBold", "Helvetica Neue", Arial, sans-serif;
 	--boardItemHeight: 66px;
 
 	--linkColor-dark: #fff;
@@ -75,8 +60,9 @@ body {
 	display: flex;
 	flex-direction: column;
 	/* justify-content: space-between; */
+	min-height: 100vh;
 	height: 100vh;
-	height: calc(var(--vh, 1vh) * 100);
+	/* height: calc(var(--vh, 1vh) * 100); */
 	height: 100svh;
 	margin: 0;
 	padding: 0;
